--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,9 @@ variables:
   # Azure Resource Manager connection created during pipeline creation
   azureServiceConnectionId: 'ODLUserTemp'
   
+  # Resource Group
+  resourceGroupName: 'Azuredevops'
+  
   # Web app name
   webAppName: 'dill13'
 
@@ -85,3 +88,4 @@ stages:
               azureSubscription: $(azureServiceConnectionId)
               appName: $(webAppName)
               package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
+              ResourceGroupName: $(resourceGroupName)
